--- a/src/home/banner/index.scss
+++ b/src/home/banner/index.scss
@@ -220,7 +220,6 @@
       .speakerInfo {
         padding-left: 1vmax;
         display: inline-block;
-        text-align: center;
 
         .pic {
           @media only screen and (max-width: 1024px) {
