--- a/src/home/index.scss
+++ b/src/home/index.scss
@@ -90,8 +90,8 @@
   .step {
     padding-bottom: 1vmax;
     .img {
-      width: 4vmax;
-      height: 4vmax;
+      width: 3.5vmax;
+      height: 3.5vmax;
       display: inline-block;
       background-size: cover;
     }
